# gifpolis

./: README.md  gifpolis.glade  main.py  pyproject.toml
gifpolis/: file.py  init.sql  insert-gif.sql  library.py  provider.py  search.sql
gifpolis/providers/: giphy.py
