[tool.poetry]
name = "gifpolis"
version = "0.1.0"
description = "Search and store your GIFs with Gifpolis!"
authors = ["Adrián Arroyo Calle <adrian.arroyocalle@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
Pillow = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
